--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
 body {
     background-color: dimgray;
+    width: 700px;
+}
+
+#board {
+    margin: 25px;
+    display: flex;
+    flex-wrap: wrap;
 }
