--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,14 @@ body {
     width: 700px;
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 30px;
+    margin: auto;
+}
+h1 {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 40px;
+    color:darkgrey; 
+    text-align: center;
+    margin: 0;
 }
 .board {
     width:650px;
@@ -16,6 +24,7 @@ body {
 }
 .cards {
     padding: 5px;
+    border-radius: 25px;
 }
 #header {
     display: flex;
@@ -25,10 +34,11 @@ body {
     color:darkgrey; 
 }
 #restart {
-    font-size: 20px;
+    font-size: 25px;
     background-color: rgb(0 117 140);
-    color: white;
+    color:darkgrey; 
     border-radius: 15px;
+    font-family: 'Open Sans Condensed', sans-serif;
 }
 .messages {
     color: white;
