--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-/* * {
+* {
     border: 1px solid white;  
-} */
+}
 
 body {
     background-color: rgb(29, 29, 38);
-    width: 700px;
+    width: 1050px;
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 30px;
     color:darkgrey;
@@ -15,30 +15,42 @@ h1 {
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 40px;
     margin: 0;
+    padding-top: 25px;
 }
 h2 {
     color: darkgrey;
     font-size: 30px;
 }
-#whichgame{
+#whichgame {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    
+    justify-content: space-evenly; 
+}
+#main {
+    border-radius: 20px;
 }
 .board {
     width:650px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     padding: 25px;
+    margin: auto;
+}
+#hardboard {
+    /* display: flex;
+    justify-content: center; */
+    width: 1000px;
 }
 .cards {
     padding: 5px;
     border-radius: 25px;
 }
 #header {
+    width: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+
 }
 .score {
     color:darkgrey; 
